Fix GitHub link alignment in Chrome (should be to the right)

--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -35,7 +35,7 @@
 .sideLinks {
   flex-grow: 1;
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
 }
 
 .githubLink {
